--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script charset="utf-8" src="https://api-maps.yandex.ru/2.0/?load=package.standard&lang=en-EN" type="text/javascript"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 
