--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <!-- Current location -->
       <div class="header__location">
         <img src="img/icons/location.svg" alt="Location" class="header__location-img">
-        <div class="header__location-name">Krasnoyarsk</div>
+        <div class="header__location-name">Unknown</div>
       </div>
 
     </div>
@@ -271,7 +271,7 @@
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script charset="utf-8" src="https://api-maps.yandex.ru/2.0/?load=package.standard&lang=en-EN" type="text/javascript"></script>
+  <script src="https://cdn.ipwhois.io/js/ipwhois.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 
