start new section 'Surf'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <!-- Header -->
   <header class="header">
-    <div class="header__title section__title-back">
+    <div class="header__title section__title-back section__title-back_header">
       go surf
     </div>
 
@@ -146,7 +146,7 @@
           <div class="slider-item__info-suptitle suptitle-left">
             Condition
           </div>
-          <div class="slider-item__info-name">
+          <div class="slider-item__info-name subtitle-main">
             Radical
           </div>
           <a href="#" class="slider-item__info-link">
@@ -166,7 +166,7 @@
           <div class="slider-item__info-suptitle suptitle-left">
             Condition
           </div>
-          <div class="slider-item__info-name">
+          <div class="slider-item__info-name subtitle-main">
             Radical
           </div>
           <a href="#" class="slider-item__info-link">
@@ -186,7 +186,7 @@
           <div class="slider-item__info-suptitle suptitle-left">
             Condition
           </div>
-          <div class="slider-item__info-name">
+          <div class="slider-item__info-name subtitle-main">
             Radical
           </div>
           <a href="#" class="slider-item__info-link">
@@ -206,7 +206,7 @@
           <div class="slider-item__info-suptitle suptitle-left">
             Condition
           </div>
-          <div class="slider-item__info-name">
+          <div class="slider-item__info-name subtitle-main">
             Radical
           </div>
           <a href="#" class="slider-item__info-link">
@@ -267,6 +267,58 @@
     </div>
 
   </header>
+  
+  <!-- main container -->
+  <div class="container">
+
+    <!-- Surf places -->
+    <section class="section surf">
+      <div class="surf__title section__title">
+        Surf
+        <div class="section__title-back section__title-back_surf">
+          Surf
+        </div>
+      </div>
+
+      <!-- Subtitle -->
+      <div class="section__subtitle surf__subtitle-wrap">
+        <div class="surf__subtitle-top suptitle-left">
+          Current location
+        </div>
+        <div class="surf__subtitle-bottom subtitle-main">
+          <span class="surf__subtitle-bottom-city">California</span>
+          <span class="surf__subtitle-bottom-vertline">|</span>
+          <span class="surf__subtitle-bottom-coubtry">USA</span>
+        </div>
+
+        <!-- bg marker location -->
+        <img src="img/icons/location.svg" alt="Location" class="surf__location-img">
+      </div>
+
+      <div class="surf-slider">
+        <div class="surf-slider__item">
+          <div class="surf-slider__item-title">
+            Malibu Beach
+          </div>
+          <div class="surf-slider__item-placename">
+            California | USA
+          </div>
+          <a href="#" class="btn-box">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+      </div>
+
+
+    </section>
+
+  </div>
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
