add slider in section 'Surf'

--- a/index.html
+++ b/index.html
@@ -295,15 +295,19 @@
         <img src="img/icons/location.svg" alt="Location" class="surf__location-img">
       </div>
 
+      
       <div class="surf-slider">
-        <div class="surf-slider__item">
-          <div class="surf-slider__item-title">
+        
+        <!-- slide 1 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-1.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
             Malibu Beach
           </div>
           <div class="surf-slider__item-placename">
             California | USA
           </div>
-          <a href="#" class="btn-box">
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
             <div class="btn-box__first">
               View
             </div>
@@ -313,6 +317,147 @@
             </div>
           </a>
         </div>
+
+        <!-- slide 2 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-2.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
+            Airlie Beach
+          </div>
+          <div class="surf-slider__item-placename">
+            Queensland | Australia
+          </div>
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+
+        <!-- slide 3 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-3.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
+            Cloud Nine
+          </div>
+          <div class="surf-slider__item-placename">
+            Siargao | Philippines
+          </div>
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+
+        <!-- slide 4 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-4.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
+            Vieux Boucau
+          </div>
+          <div class="surf-slider__item-placename">
+            Hossegor | France
+          </div>
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+
+        <!-- slide 5 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-5.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
+            Malibu Beach
+          </div>
+          <div class="surf-slider__item-placename">
+            California | USA
+          </div>
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+
+        <!-- slide 6 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-6.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
+            Malibu Beach
+          </div>
+          <div class="surf-slider__item-placename">
+            California | USA
+          </div>
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+
+        <!-- slide 7 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-7.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
+            Malibu Beach
+          </div>
+          <div class="surf-slider__item-placename">
+            California | USA
+          </div>
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+
+        <!-- slide 8 -->
+        <div class="surf-slider__item" style="background-image: url(img/surf/slide-8.jpg);">
+          <div class="surf-slider__item-title subtitle-main">
+            Malibu Beach
+          </div>
+          <div class="surf-slider__item-placename">
+            California | USA
+          </div>
+          <!-- slides button -->
+          <a href="#" class="btn-box btn-box_surf">
+            <div class="btn-box__first">
+              View
+            </div>
+            <div class="btn-box__second">
+              Surf
+              <img src="img/icons/arrow-right.svg" alt="View Surf" class="btn-box__arrow">
+            </div>
+          </a>
+        </div>
+
       </div>
 
 
