--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   <!-- main container -->
   <div class="container">
 
-    <!-- Surf places -->
+    <!-- Section surf places -->
     <section class="section surf">
       <div class="surf__title section__title">
         Surf
@@ -288,7 +288,7 @@
         <div class="surf__subtitle-bottom subtitle-main">
           <span class="surf__subtitle-bottom-city">California</span>
           <span class="surf__subtitle-bottom-vertline">|</span>
-          <span class="surf__subtitle-bottom-coubtry">USA</span>
+          <span class="surf__subtitle-bottom-country">USA</span>
         </div>
 
         <!-- bg marker location -->
@@ -781,6 +781,90 @@
 
       </div>
 
+
+    </section>
+
+    <!-- Section Travel-->
+    <section class="section travel">
+      <div class="container">
+        <div class="travel__title section__title">
+          Travel
+          <div class="section__title-back section__title-back_travel">
+            Travel
+          </div>
+        </div>
+
+        <!-- Travel slider -->
+        <div class="travel__slider">
+          <div class="travel__slider-item">
+            <!-- Subtitle top-->
+            <div class="section__subtitle travel__subtitle-wrap">
+              <div class="travel__subtitle-top suptitle-left">
+                Shore
+              </div>
+              <div class="travel__subtitle-bottom subtitle-main">
+                <span class="travel__subtitle-bottom-city">Airlie Beach</span>
+                <span class="travel__subtitle-bottom-vertline">|</span>
+                <span class="travel__subtitle-bottom-country">Australia</span>
+              </div>
+            </div>
+
+            <!-- Slide bg -->
+            <div class="travel__slider-item-bg" style="background-image: url(../img/travel/travel-1.jpg);">
+              <img src="img/travel/Airlines/Virgin.png" alt="Virgin" class="travel__airline-plane">
+            </div>
+
+            <!-- Subtitle bottom-->
+            <div class="section__subtitle travel__subtitle-wrap travel__subtitle-wrap_left">
+              <div class="travel__subtitle-top suptitle-right">
+                Airline
+              </div>
+              <div class="travel__subtitle-bottom subtitle-main">
+                <span class="travel__subtitle-bottom-city">Virgin Australia</span>
+                <img src="img/travel/icons/airline-virgin.png" alt="Virgin Airlines" class="travel__airline-logo">
+              </div>             
+            </div>
+            
+            <!-- Travel Info -->
+            <div class="travel__info">
+              <div class="travel__info-item travel__info-item_destination">
+                <div class="travel__info-title travel__info-vert">Destination</div>
+                <div class="travel__info-value">Queensland Australia</div>
+              </div>
+              <div class="travel__info-item travel__info-item_distance">
+                <div class="travel__info-title travel__info-vert">Distance</div>
+                <div class="travel__info-value">7,065 Miles</div>
+              </div>
+              <div class="travel__info-item travel__info-item_time">
+                <div class="travel__info-title travel__info-vert">Travel Time</div>
+                <div class="travel__info-value">
+                  23 Hours <br> 5 Minutes
+                </div>
+              </div>
+              <div class="travel__info-item travel__info-item_price">
+                <div class="travel__info-title travel__info-vert">Pricing</div>
+                <div class="travel__info-value">
+                  $1,976 USD
+                  <div class="travel__info-subvalue">Round Trip</div>
+                </div>
+                
+              </div>
+            </div>
+
+            <!-- Bottom button -->
+            <a href="#" class="btn-box btn-box_travel">
+              <div class="btn-box__first">
+                Book
+              </div>
+              <div class="btn-box__second">
+                Flight
+                <img src="img/icons/arrow-right.svg" alt="Book Flight" class="btn-box__arrow">
+              </div>
+            </a>
+
+          </div>
+        </div>
+      </div>
 
     </section>
 
