--- a/index.html
+++ b/index.html
@@ -1406,16 +1406,26 @@
               </div>
               <div class="holder__info-item holder__info-item_distance">
                 <div class="holder__info-title holder__info-vert"># of Nights</div>
-                <div class="holder__info-value">5 Nights</div>
+                <div class="holder__info-value sleep__info-value">
+                  <div class="quantity">
+                    <input type="number" min="5" max="14" step="1" value="5">
+                  </div>
+                  Nights
+                </div>
               </div>
               <div class="holder__info-item holder__info-item_time">
                 <div class="holder__info-title holder__info-vert"># of Guests</div>
-                <div class="holder__info-value">4 Guests</div>
+                <div class="holder__info-value sleep__info-value">
+                  <div class="quantity">
+                    <input type="number" min="1" max="10" step="1" value="2">
+                  </div>
+                  Guests
+                </div>
               </div>
               <div class="holder__info-item holder__info-item_price">
                 <div class="holder__info-title holder__info-vert">Pricing</div>
                 <div class="holder__info-value">
-                  $349 USD
+                  $<span class="sleep__summ">349</span> USD
                   <div class="holder__info-subvalue">Per Night</div>
                 </div>
 
