--- a/index.html
+++ b/index.html
@@ -2354,6 +2354,28 @@
 
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <!-- Bottom button -->
+        <a href="#" class="btn-box btn-box_footer">
+          <div class="btn-box__first">
+            Go
+          </div>
+          <div class="btn-box__second">
+            Surf
+          </div>
+        </a>
+        </div>
+        <div class="footer__descr">
+          © Go-Surf 2018. All Rights Reserved.
+        </div>
+      </div>
+
+      
+
+    </footer>
+
   </div>
 
   <!-- Scripts -->
