made adaptive for section 'Header'

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 
 
     </div>
+
+    <!-- menu Hamburger -->
+    <div class="menu-btn">
+      <div class="menu-btn__line"></div>
+      <div class="menu-btn__line"></div>
+      <div class="menu-btn__line"></div>
+    </div>
     
     <!-- Header aside -->
     <div class="header__aside">
@@ -75,6 +82,7 @@
         </a>
       </div>
 
+      
       <!-- Header menu -->
       <nav class="menu header__menu">
         <ul class="menu__list">
